styles/style.css
/*
  ======================
  General
  ======================
*/

.page-container {
    color: #000;
    font-size: 13px;
    font-family: Arial, Helvetica, sans-serif;

    min-height: 100%; /* for older browsers */
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.logo {
    width: 160px;
}

a {
    text-decoration: none;
    color: inherit;
}


/*
  ======================
  Navigation
  ======================
*/

nav {
    width: 100%;
    height: 48px;
    position: fixed;
    left: 0px;
    top: 0px;

    display: flex;
    justify-content: space-between;
    align-items: stretch;
}

.nav-left, .nav-right {
    display: flex;
    width: 160px;
}

.nav-left {
    color: #757575;
    text-transform: uppercase;
    font-weight: 600;
    font-size: 12px;
    padding-top: 15px;
    padding-left: 15px;
    align-items: stretch;
    justify-content: space-between;
}

.nav-right {
    padding-top: 10px;
    padding-right: 8px;
    justify-content: flex-end;
}

.nav-left .nav-item-container {
    height: 100%;
    margin-right: 0 auto;
}

.nav-left .nav-item-container a {
    display: inline-block;
    height: 100%;
    padding: 3px 8px 0;
}

.nav-right .nav-item-container {
    margin-left: 18px;
}

.active {
    color: #4285f4;
    border-bottom: 2px solid #4285f4;
}

.btn-sign-in {
    display: inline-block;
    padding: 0 12px;
    line-height: 28px;
    color: #666;
    border: 1px solid #c6c6c6;
    border-radius: 2px;
    background-color: #f8f8f8;
}

/*
  ======================
  Main
  ======================
*/

main {
    flex: 1 0 auto;

    display: flex;
    flex-direction: column;
    margin-top: 80px;
}

.logo-wrap {
    display: flex;
    justify-content: center;
    align-content: center;
    margin: 30px auto;
}

/*
  ======================
  Main > Search bar
  ======================
*/

.search-form-container {
    margin: 0 7px;
}

.search-bar {
    margin: 0 auto;
    max-width: 570px;
    width: auto;
    height: 40px;
    border: 1px solid #e2e2e2;
    border-radius: 20px;
    
    display: flex;
    justify-content: space-between;
}

.search-bar input {
    line-height: 25px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 16px;
    border: none;
    margin: 5px 0 6px 20px;
    flex: 1;
}

.search-btn {
    width: 42px;
    height: 40px;
    margin: -1px;
    background-color:#3b78e7;
    border: 1px solid #3367d6;
    border-radius: 0 20px 20px 0;
}


/*
  ======================
  Footer
  ======================
*/

footer {
    flex-shrink: 0;

    color: #727272;
    background-color: #f2f2f2;
    display: flex;
    flex-direction: column;
}

.country {
    font-size: 16px;
    padding: 0 13px 2px;
    line-height: 35px;
}

.foot-nav {
    border-top: 1px solid #e2e2e2;
    padding: 8px 0;
    display: flex;
    flex-direction: column-reverse;
    justify-content: space-between;
}

.foot-right, .foot-left {
    display: flex;
    justify-content: center;
}

.foot-item-container {
    margin: 12px 14px;
}


/*
  ======================
  Icons
  ======================
*/

.icon {
    display: inline-block;
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
}

.icon-apps {
    position: relative;
    top: 7px;

    width: 16px;
    height: 16px;
    background-image: url(../images/show-apps-button.svg);
    opacity: 0.5;
}

.icon-apps:hover {
    opacity: 0.8;
}

.icon-hamburger {
    width: 20px;
    height: 20px;
    background-image: url(../images/Hamburger_icon.svg);
    opacity: 0.6;
}

.icon-search {
    display: flex;
    align-items: center;
    width: 24px;
    height: 24px;
    line-height: 24px;
}

.icon-search svg {
    color: #fff;
    fill: currentColor;
}

.icon-mic {
    height: 20px;
    width: 20px;
    background-image: url(../images/Google_mic.svg);
}

/* Mobile version */
@media (max-width: 800px) {
    .desktop {
        display: none;
    }
}


/* Desktop version */
@media (min-width: 800px) {

    /*
    ======================
    General
    ======================
    */

    .mobile {
        display: none;
    }

    .desktop {
        display: inline-block;
    }

    .logo {
        width: 272px;
        padding-top: 87px;
    }

    a:hover {
        text-decoration: underline;
    }

    nav li a:hover {
        color: #333;
    }

    /*
    ======================
    Navigation
    ======================
    */

    .nav-left, .nav-right {
        width: 400px;
        align-items: center;
    }

    .nav-left {
        color: #000;
        font-size: 13px;
        font-weight: normal;
        text-transform: capitalize;
        justify-content: flex-start
    }

    .nav-right {
        padding-top: 15px;
        padding-right: 30px;
    }

    .btn-sign-in {
        color: #fff;
        font-weight: bold;
        outline: none;
        background-color: #4683ea;
        border: 1px solid #4285f4;
    }

    .icon-apps {
        top: 0;
    }

    /*
    ======================
    Main
    ======================
    */
    .search-bar {
        height: 45px;
    }

    .search-bar:focus,
    .search-bar:hover {
        box-shadow: 0 1px 5px #cecece;
        border: 1px solid transparent;
    }
    
    input:focus{
        outline: none;
    }
    
    #voice-wrap {
        width: 40px;
        padding-right: 15px;
        display: flex;
        justify-content: center;
        align-items: center;
    }

    /*
    ======================
    Main > Buttons
    ======================
    */

    .btn-wrap {
        
        padding-top: 15px;
        display: flex;
        justify-content: center;
    }

    .btn-wrap .btn {
        font-family: Arial, Helvetica, sans-serif;
        color: #555;
        background-color: #f2f2f2;
        margin: 15px 6px;
        padding: 9px 16px;
        border: 1px solid transparent;
        font-size: 14px;
        border-radius: 2px;
        cursor: pointer;
    }
    
    .btn-wrap .btn:hover {
        color: #222;
        background-color: #f5f5f5;
        border: 1px solid #c8c8c8;
        box-shadow: 0 1px 2px #f1f1f1; 
        box-shadow: inset 0 1px 5px #f1f1f1;
    }

    /*
    ======================
    Footer
    ======================
    */

    footer {
        border-top: 1px solid #e2e2e2;
    }

    .country {
        padding: 2px 30px;
        font-size: 15px;
    }
    
    .foot-nav {
        padding: 2px 15px;
        flex-direction: row;
    }

    .foot-right .foot-item-container:first-child {
        order: 1;
    }

}

